--- a/app/radialMotion.scss
+++ b/app/radialMotion.scss
@@ -1,8 +1,4 @@
-@charset "utf-8"
-* {
-	margin: 0;
-	padding: 0;
-}
+@charset "utf-8";
 body {
 	background-color: #292a38;
 	font-family: "Microsoft Yahei";
